# inst_db

./: .gitignore  README.md  README_NEW.md  SEMANTIC_ANALYSIS.md  pyproject.toml  start_web_ui.py
docs/: IMPLEMENTATION_SUMMARY.md  QEMU_USAGE.md
examples/: basic_usage.py  qemu_import_example.py  qemu_quickstart.py
qemu_log/: .gitignore  Makefile  README.md
qemu_log/tests/min/: aarch64_min.c  riscv64_min.c
scripts/: export_arm64_regs_csv.py  generate_qemu_trace.sh  init_db.py  test_register_normalization.py
scripts/db_tools/: common.py  detect_cross_core_memory_conflicts.py  detect_loops.py  query_mem_dep_chain.py  query_reg_dep_chain.py  query_self_modifying.py
scripts/runners/: run_qemu_trace.py  run_qsort_trace.py  run_spike_trace.py  run_sve_trace.py
scripts/runners/source/: pthread_demo.c  qsort_demo.c  riscv_demo_nopk.S  sve_demo.c
src/inst_db/: __init__.py  api.py
src/inst_db/database/: __init__.py  connection.py
src/inst_db/disassembler/: __init__.py  arm64.py  riscv.py
src/inst_db/models/: __init__.py  instruction.py
src/inst_db/parsers/: __init__.py  qemu_trace.py  spike_trace.py
src/inst_db/sql_healper/: benchmark_dpd.py  (+2 more)
tests/: __init__.py  test_db_tools_cross_core_conflicts.py  test_db_tools_detect_loops.py  test_db_tools_mem_dep_chain.py  test_db_tools_reg_dep_chain.py  test_db_tools_self_modifying.py  test_instruction_db_architecture.py  test_models.py  test_qemu_parser.py  test_qemu_runner.py  test_riscv_disassembler.py  test_spike_parser.py  test_spike_runner.py
tmp/: README.txt  qsort_demo.c  run_qsort_trace.py
(+12 files in other folders)
