[project]
name = "inst_db"
version = "0.1.0"
description = "ARM64 Instruction Tracing Database System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Developer", email = "dev@example.com" }]
license = { text = "MIT" }

dependencies = [
    "sqlalchemy>=2.0",
    "capstone>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inst_db"]
